--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,24 +2,23 @@ name: CI PIPELINE
 
 on:
   push:
-    branches: [main]
-  
+    branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
-  steps:
-    - name: checkout code
-     uses: actions/checkout@v5
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: setup nodejs
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run tests
-      run: npm test
-    
+      - name: Run tests
+        run: npm test
